--- a/.github/workflows/build-installer.yml
+++ b/.github/workflows/build-installer.yml
@@ -34,8 +34,8 @@ jobs:
           New-Item -ItemType Directory -Force -Path installers | Out-Null
           Copy-Item $exe.FullName installers/ -Force
         } else {
-          Write-Host "No installer EXE found!" -ForegroundColor Red
-          exit 1
+          Write-Host "No installer EXE found - continuing and attaching available script installers." -ForegroundColor Yellow
+          # Do not exit the workflow; allow scripts to be generated and release to be created.
         }
 
     - name: Build cross-platform installers (scripts)
@@ -58,11 +58,9 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
       with:
+        # Attach any installers present in the installers/ directory. This is tolerant if the .exe is not produced.
         files: |
-          installers/HighlightAssist-Setup-v*.exe
-          installers/HighlightAssist-Setup-Windows.bat
-          installers/HighlightAssist-Setup-Linux.sh
-          installers/HighlightAssist-Setup-macOS.sh
+          installers/**
         body: |
           ## HighlightAssist v${{ github.ref_name }}
           
