--- a/.github/workflows/build-installer.yml
+++ b/.github/workflows/build-installer.yml
@@ -49,6 +49,15 @@ jobs:
         $g2.Dispose()
         $bmp2.Dispose()
         Write-Host "Placeholder images created: $imgPath, $imgSmallPath"
+
+    - name: Build native messaging host
+      run: |
+        python -m pip install --upgrade pip
+        pip install pyinstaller
+        pyinstaller .\native_host\bridge_host.py --onefile --name highlightassist-native-host --distpath native_host\dist --workpath native_host\build --clean
+        if (-Not (Test-Path -Path native_host\dist\highlightassist-native-host.exe)) {
+          throw "Native host executable not found after build."
+        }
     
     - name: Build installer
       run: |
