--- a/.github/workflows/build-installer.yml
+++ b/.github/workflows/build-installer.yml
@@ -20,8 +20,8 @@ jobs:
     
     - name: Create installer images (placeholder)
       run: |
-        # Create simple BMP placeholder images for the installer wizard so ISCC won't fail when packaging
-        Write-Host "Generating placeholder wizard images..."
+        # Generate branded wizard artwork to give the installer a modern feel
+        Write-Host "Generating modern wizard images..."
         Add-Type -AssemblyName System.Drawing
         $root = Get-Location
         $imgPath = Join-Path $root 'installer-wizard-image.bmp'
@@ -30,13 +30,40 @@ jobs:
         # Large image (164x314)
         $bmp = New-Object System.Drawing.Bitmap 164,314
         $g = [System.Drawing.Graphics]::FromImage($bmp)
-        $g.Clear([System.Drawing.Color]::FromArgb(124,58,237))
-        # Draw a simple title to make it non-empty
-        try {
-          $font = New-Object System.Drawing.Font('Segoe UI',18)
-          $brush = [System.Drawing.Brushes]::White
-          $g.DrawString('HighlightAssist', $font, $brush, 8, 130)
-        } catch { }
+        $rect = New-Object System.Drawing.Rectangle(0,0,164,314)
+        $gradient = New-Object System.Drawing.Drawing2D.LinearGradientBrush(
+          $rect,
+          [System.Drawing.Color]::FromArgb(46,16,101),
+          [System.Drawing.Color]::FromArgb(99,102,241),
+          [System.Drawing.Drawing2D.LinearGradientMode]::ForwardDiagonal
+        )
+        $g.FillRectangle($gradient, $rect)
+        $gradient.Dispose()
+
+        # Accent wave strokes for motion
+        $pen = New-Object System.Drawing.Pen([System.Drawing.Color]::FromArgb(90,255,255,255), 1.6)
+        for ($y = 40; $y -lt 300; $y += 24) {
+          $g.DrawBezier($pen, 0, $y, 60, $y-12, 120, $y+12, 164, $y-6)
+        }
+        $pen.Dispose()
+
+        # Typography + badge
+        $titleFont = New-Object System.Drawing.Font('Segoe UI Semibold', 18)
+        $subtitleFont = New-Object System.Drawing.Font('Segoe UI', 9)
+        $tagFont = New-Object System.Drawing.Font('Segoe UI', 8, [System.Drawing.FontStyle]::Bold)
+        $brushWhite = [System.Drawing.Brushes]::White
+        $brushAccent = New-Object System.Drawing.SolidBrush([System.Drawing.Color]::FromArgb(255,167,139,250))
+        $g.DrawString('HighlightAssist', $titleFont, $brushWhite, 12, 118)
+        $g.DrawString('Bridge & Native Helper', $subtitleFont, $brushWhite, 12, 150)
+        $badgeRect = New-Object System.Drawing.RectangleF(12, 185, 130, 28)
+        $badgeBrush = New-Object System.Drawing.SolidBrush([System.Drawing.Color]::FromArgb(35,255,255,255))
+        $g.FillRectangle($badgeBrush, $badgeRect)
+        $g.DrawString('Secure Local Service', $tagFont, $brushAccent, 18, 191)
+        $badgeBrush.Dispose()
+        $brushAccent.Dispose()
+        $titleFont.Dispose()
+        $subtitleFont.Dispose()
+        $tagFont.Dispose()
         $bmp.Save($imgPath, [System.Drawing.Imaging.ImageFormat]::Bmp)
         $g.Dispose()
         $bmp.Dispose()
@@ -44,11 +71,22 @@ jobs:
         # Small image (55x58)
         $bmp2 = New-Object System.Drawing.Bitmap 55,58
         $g2 = [System.Drawing.Graphics]::FromImage($bmp2)
-        $g2.Clear([System.Drawing.Color]::FromArgb(16,185,129))
+        $rectSmall = New-Object System.Drawing.Rectangle(0,0,55,58)
+        $gradientSmall = New-Object System.Drawing.Drawing2D.LinearGradientBrush(
+          $rectSmall,
+          [System.Drawing.Color]::FromArgb(20,184,166),
+          [System.Drawing.Color]::FromArgb(5,150,105),
+          [System.Drawing.Drawing2D.LinearGradientMode]::ForwardDiagonal
+        )
+        $g2.FillRectangle($gradientSmall, $rectSmall)
+        $gradientSmall.Dispose()
+        $iconFont = New-Object System.Drawing.Font('Segoe UI Symbol', 20)
+        $g2.DrawString('🔒', $iconFont, [System.Drawing.Brushes]::White, 10, 12)
+        $iconFont.Dispose()
         $bmp2.Save($imgSmallPath, [System.Drawing.Imaging.ImageFormat]::Bmp)
         $g2.Dispose()
         $bmp2.Dispose()
-        Write-Host "Placeholder images created: $imgPath, $imgSmallPath"
+        Write-Host "Modern wizard images created: $imgPath, $imgSmallPath"
 
     - name: Build native messaging host
       run: |
