--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,7 @@
   "homepage_url": "https://github.com/Skullcandyxxx/LawFirmProject",
   "permissions": [
     "activeTab",
+    "tabs",
     "scripting",
     "storage",
     "nativeMessaging"
