--- a/.github/workflows/build-installer.yml
+++ b/.github/workflows/build-installer.yml
@@ -1,4 +1,4 @@
-name: Build Windows Installer
+name: Build Native Host & Installers
 
 on:
   push:
@@ -7,182 +7,89 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-windows-installer:
-    runs-on: windows-latest
-    
+  build-native-matrix:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [windows-latest, ubuntu-latest, macos-latest]
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-    
-    - name: Install Inno Setup
-      run: |
-        choco install innosetup -y
-    
-    - name: Create installer images (placeholder)
-      run: |
-        # Generate branded wizard artwork to give the installer a modern feel
-        Write-Host "Generating modern wizard images..."
-        Add-Type -AssemblyName System.Drawing
-        $root = Get-Location
-        $imgPath = Join-Path $root 'installer-wizard-image.bmp'
-        $imgSmallPath = Join-Path $root 'installer-wizard-small.bmp'
+      - name: Checkout
+        uses: actions/checkout@v4
 
-        # Large image (164x314)
-        $bmp = New-Object System.Drawing.Bitmap 164,314
-        $g = [System.Drawing.Graphics]::FromImage($bmp)
-        $rect = New-Object System.Drawing.Rectangle(0,0,164,314)
-        $gradient = New-Object System.Drawing.Drawing2D.LinearGradientBrush(
-          $rect,
-          [System.Drawing.Color]::FromArgb(46,16,101),
-          [System.Drawing.Color]::FromArgb(99,102,241),
-          [System.Drawing.Drawing2D.LinearGradientMode]::ForwardDiagonal
-        )
-        $g.FillRectangle($gradient, $rect)
-        $gradient.Dispose()
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-        # Accent wave strokes for motion
-        $pen = New-Object System.Drawing.Pen([System.Drawing.Color]::FromArgb(90,255,255,255), 1.6)
-        for ($y = 40; $y -lt 300; $y += 24) {
-          $g.DrawBezier($pen, 0, $y, 60, $y-12, 120, $y+12, 164, $y-6)
-        }
-        $pen.Dispose()
+      - name: Install requirements
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt || true
+          pip install pyinstaller
 
-        # Typography + badge
-        $titleFont = New-Object System.Drawing.Font('Segoe UI Semibold', 18)
-        $subtitleFont = New-Object System.Drawing.Font('Segoe UI', 9)
-        $tagFont = New-Object System.Drawing.Font('Segoe UI', 8, [System.Drawing.FontStyle]::Bold)
-        $brushWhite = [System.Drawing.Brushes]::White
-        $brushAccent = New-Object System.Drawing.SolidBrush([System.Drawing.Color]::FromArgb(255,167,139,250))
-        $g.DrawString('HighlightAssist', $titleFont, $brushWhite, 12, 118)
-        $g.DrawString('Bridge & Native Helper', $subtitleFont, $brushWhite, 12, 150)
-        $badgeRect = New-Object System.Drawing.RectangleF(12, 185, 130, 28)
-        $badgeBrush = New-Object System.Drawing.SolidBrush([System.Drawing.Color]::FromArgb(35,255,255,255))
-        $g.FillRectangle($badgeBrush, $badgeRect)
-        $g.DrawString('Secure Local Service', $tagFont, $brushAccent, 18, 191)
-        $badgeBrush.Dispose()
-        $brushAccent.Dispose()
-        $titleFont.Dispose()
-        $subtitleFont.Dispose()
-        $tagFont.Dispose()
-        $bmp.Save($imgPath, [System.Drawing.Imaging.ImageFormat]::Bmp)
-        $g.Dispose()
-        $bmp.Dispose()
+      - name: Build native host (PyInstaller)
+        shell: bash
+        run: |
+          set -e
+          echo "Building native host on ${RUNNER_OS}"
+          if [ "${RUNNER_OS}" = "Windows" ]; then
+            pyinstaller native_host/bridge_host.py --onefile --name highlightassist-native-host --distpath native_host/dist --workpath native_host/build --clean --hidden-import=pystray --hidden-import=PIL --hidden-import=plyer --add-data "assets\\icon-128.png;assets"
+          else
+            pyinstaller native_host/bridge_host.py --onefile --name highlightassist-native-host --distpath native_host/dist --workpath native_host/build --clean --hidden-import=pystray --hidden-import=PIL --hidden-import=plyer --add-data "assets/icon-128.png:assets"
+          fi
 
-        # Small image (55x58)
-        $bmp2 = New-Object System.Drawing.Bitmap 55,58
-        $g2 = [System.Drawing.Graphics]::FromImage($bmp2)
-        $rectSmall = New-Object System.Drawing.Rectangle(0,0,55,58)
-        $gradientSmall = New-Object System.Drawing.Drawing2D.LinearGradientBrush(
-          $rectSmall,
-          [System.Drawing.Color]::FromArgb(20,184,166),
-          [System.Drawing.Color]::FromArgb(5,150,105),
-          [System.Drawing.Drawing2D.LinearGradientMode]::ForwardDiagonal
-        )
-        $g2.FillRectangle($gradientSmall, $rectSmall)
-        $gradientSmall.Dispose()
-        $iconFont = New-Object System.Drawing.Font('Segoe UI Symbol', 20)
-        $g2.DrawString('🔒', $iconFont, [System.Drawing.Brushes]::White, 10, 12)
-        $iconFont.Dispose()
-        $bmp2.Save($imgSmallPath, [System.Drawing.Imaging.ImageFormat]::Bmp)
-        $g2.Dispose()
-        $bmp2.Dispose()
-        Write-Host "Modern wizard images created: $imgPath, $imgSmallPath"
+      - name: Package platform-specific installer (Windows only)
+        if: runner.os == 'Windows'
+        run: |
+          choco install innosetup -y || true
+          pwsh -NoProfile -ExecutionPolicy Bypass -Command "& 'C:\Program Files (x86)\Inno Setup 6\ISCC.exe' installer-config.iss"
+        shell: powershell
 
-    - name: Build native messaging host
-      run: |
-        python -m pip install --upgrade pip
-        # Install runtime requirements so the PyInstaller build bundles optional tray/notify libs
-        pip install -r requirements.txt
-        pip install pyinstaller
-        pyinstaller .\native_host\bridge_host.py --onefile --name highlightassist-native-host --distpath native_host\dist --workpath native_host\build --clean --hidden-import=pystray --hidden-import=PIL --hidden-import=plyer --add-data "assets\\icon-128.png;assets"
-        if (-Not (Test-Path -Path native_host\dist\highlightassist-native-host.exe)) {
-          throw "Native host executable not found after build."
-        }
-    
-    - name: Build installer
-      run: |
-        & "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" installer-config.iss
-        # Find the generated .exe (assuming output in project root or Output/)
-        $exe = Get-ChildItem -Path . -Filter "HighlightAssist-Setup-v*.exe" -Recurse | Select-Object -First 1
-        $installersDir = Join-Path (Get-Location) 'installers'
-        if (-not (Test-Path $installersDir)) {
-          New-Item -ItemType Directory -Force -Path $installersDir | Out-Null
-        }
-        if ($exe) {
-          $installersFullPath = (Get-Item $installersDir).FullName
-          if ($exe.Directory.FullName -eq $installersFullPath) {
-            Write-Host "Installer already located in installers/, skipping copy."
-          } else {
-            Copy-Item $exe.FullName $installersDir -Force
-          }
-        } else {
-          Write-Host "No installer EXE found - continuing and attaching available script installers." -ForegroundColor Yellow
-          # Do not exit the workflow; allow scripts to be generated and release to be created.
-        }
+      - name: Generate script installers (non-Windows)
+        if: runner.os != 'Windows'
+        run: |
+          echo "Generating script installer for ${RUNNER_OS}"
+          pwsh -NoProfile -ExecutionPolicy Bypass -Command "./build-installers.ps1" || true
+        shell: bash
 
-    - name: Build cross-platform installers (scripts)
-      run: |
-        Write-Host "Running build-installers.ps1 to generate bat/sh installers..."
-        pwsh -NoProfile -ExecutionPolicy Bypass -Command "./build-installers.ps1"
+      - name: Collect artifacts
+        run: |
+          mkdir -p build_artifacts
+          if [ -d native_host/dist ]; then
+            cp -r native_host/dist/* build_artifacts/ || true
+          fi
+          if [ -d installers ]; then
+            cp -r installers/* build_artifacts/ || true
+          fi
+        shell: bash
 
-    - name: "Debug - list installers folder"
-      run: |
-        Write-Host "Contents of installers/"
-        Get-ChildItem -Path installers -Recurse | Format-Table -AutoSize
-    
-    - name: Upload installer artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: HighlightAssist-Installer
-        path: installers/**
-    
-    - name: Create Release
-      if: startsWith(github.ref, 'refs/tags/')
-      uses: softprops/action-gh-release@v1
-      with:
-        # Attach any installers present in the installers/ directory. This is tolerant if the .exe is not produced.
-        files: |
-          installers/**
-        body: |
-          ## HighlightAssist v${{ github.ref_name }}
-          
-          ### 🪟 Windows Installation
-          
-          **Recommended:** Download `HighlightAssist-Setup-v*.exe` for a professional installer with:
-          - ✅ Python dependency check
-          - ✅ Automatic dependency installation
-          - ✅ Start menu shortcuts
-          - ✅ Auto-start on Windows boot
-          - ✅ Easy uninstall
-          
-          **Alternative:** Use `HighlightAssist-Setup-Windows.bat` for manual installation
-          
-          ### 🐧 Linux Installation
-          
-          Download and run `HighlightAssist-Setup-Linux.sh`:
-          ```bash
-          chmod +x HighlightAssist-Setup-Linux.sh
-          ./HighlightAssist-Setup-Linux.sh
-          ```
-          
-          ### 🍎 macOS Installation
-          
-          Download and run `HighlightAssist-Setup-macOS.sh`:
-          ```bash
-          chmod +x HighlightAssist-Setup-macOS.sh
-          ./HighlightAssist-Setup-macOS.sh
-          ```
-          
-          ---
-          
-          **What's New:**
-          - Professional Windows installer (.exe)
-          - Cross-platform installers for Linux and macOS
-          - Animated setup wizard in extension
-          - Enhanced error handling and logging
-          
-          **System Requirements:**
-          - Python 3.8 or higher
-          - Modern web browser (Chrome, Firefox, Edge, Opera, Brave)
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: highlightassist-${{ matrix.os }}-artifacts
+          path: build_artifacts/**
+
+  create-release:
+    needs: build-native-matrix
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: release_artifacts
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            release_artifacts/**
+          body: |
+            ## HighlightAssist v${{ github.ref_name }}
+            
+            Cross-platform native host builds and installers are attached.
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
