--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pyinstaller plyer pystray pillow
+          pip install pyinstaller fastapi uvicorn plyer pystray pillow
 
       - name: Build Service Manager with PyInstaller
         run: |
@@ -65,7 +65,9 @@ jobs:
           Compress-Archive -Path `
             "install-linux.sh", `
             "bridge.py", `
-            "service-manager.py", `
+            "service_manager_v2.py", `
+            "core", `
+            "tray_icon.py", `
             "requirements.txt", `
             "README.md", `
             "LICENSE" `
@@ -75,7 +77,9 @@ jobs:
           Compress-Archive -Path `
             "install-macos.sh", `
             "bridge.py", `
-            "service-manager.py", `
+            "service_manager_v2.py", `
+            "core", `
+            "tray_icon.py", `
             "requirements.txt", `
             "README.md", `
             "LICENSE" `
