--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ websockets
 pystray
 Pillow
 plyer
+psutil  # For process monitoring and health checks
 # Optional notification backends for native notifications
 win10toast; platform_system == "Windows"
 notify2; platform_system == "Linux"
