--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pyinstaller fastapi uvicorn plyer pystray pillow
+          pip install pyinstaller fastapi uvicorn plyer pystray pillow psutil
 
       - name: Build Service Manager with PyInstaller
         run: |
