--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,7 @@
     "http://*.local/*"
   ],
   "action": {
-    "default_popup": "popup-v2.html",
+    "default_popup": "popup.html",
     "default_icon": {
       "16": "icons/icon16.png",
       "32": "icons/icon32.png",
