--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -24,7 +24,8 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pyinstaller fastapi uvicorn plyer pystray pillow psutil
+          python -m pip install -r requirements.txt
+          python -m pip install pyinstaller
 
       - name: Build Service Manager with PyInstaller
         run: |
